# rvv-iree-lab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: board.yml  ci.yml
docs/rvv/: hardware-validation.md
scripts/: board-test.sh  remote-board-validate.sh
scripts/rvv/: collect_capabilities.sh  probe_compiler_flags.sh
src/: main.c
src/rvv/: vector_add.c
